verified combine and filter data steps of workflow

--- a/notebooks/4-filter-data/notebooks/4_filter_data.ipynb
+++ b/notebooks/4-filter-data/notebooks/4_filter_data.ipynb
@@ -169,7 +169,6 @@
     "]\n",
     "joined_tweet_search_terms = [\n",
     "    \"james webb\",\n",
-    "    # \"space telescope\",\n",
     "    \"webb space\",\n",
     "    \"webb telescope\",\n",
     "    \"mirror deploy\",\n",
@@ -181,26 +180,26 @@
     "    \"heat shield\",\n",
     "    \"primary mirror\",\n",
     "    \"secondary mirror\",\n",
-    "    # \"jet propulsion lab\",\n",
-    "    # \"canadian space agency\",\n",
-    "    # \"european space agency\",\n",
-    "    # \"national aeronautics\",\n",
-    "    # \"shuttle launch\",\n",
-    "    # \"space shuttle\",\n",
-    "    # \"goddard space flight center\",\n",
-    "    # \"johnson space center\",\n",
-    "    # \"ames research center\",\n",
-    "    # \"marshall space flight center\",\n",
-    "    # \"glenn research center\",\n",
-    "    # \"ball aerospace\",\n",
-    "    # \"harris corporation\",\n",
-    "    # \"space telescope science institute\",\n",
-    "    # \"billochs\",\n",
+    "    # \"jet propulsion lab\",  # picks up topics not related to the mission\n",
+    "    # \"canadian space agency\",  # picks up topics not related to the mission\n",
+    "    # \"european space agency\",  # picks up topics not related to the mission\n",
+    "    # \"national aeronautics\",  # picks up topics not related to the mission\n",
+    "    # \"shuttle launch\",  # picks up topics not related to the mission\n",
+    "    # \"space shuttle\",  # picks up topics not related to the mission\n",
+    "    # \"goddard space flight center\",  # picks up topics not related to the mission\n",
+    "    # \"johnson space center\",  # picks up topics not related to the mission\n",
+    "    # \"ames research center\",  # picks up topics not related to the mission\n",
+    "    # \"marshall space flight center\",  # picks up topics not related to the mission\n",
+    "    # \"glenn research center\",  # picks up topics not related to the mission\n",
+    "    # \"ball aerospace\",  # picks up topics not related to the mission\n",
+    "    # \"harris corporation\",  # picks up topics not related to the mission\n",
+    "    # \"space telescope science institute\",  # picks up topics not related to the mission\n",
+    "    # \"billochs\",  # picks up topics not related to the mission\n",
     "    # \"johndurning\",\n",
     "    # \"johnmather\",\n",
     "    # \"jonathangardner\",\n",
-    "    # \"northrop grumman\",\n",
-    "    # \"lockheed martin\",\n",
+    "    # \"northrop grumman\",  # picks up topics not related to the mission\n",
+    "    # \"lockheed martin\",  # picks up topics not related to the mission\n",
     "    # \"stephen hawking\",  # picks up topics not related to the mission\n",
     "    # \"dark matter\",  # picks up topics not related to the mission\n",
     "    # \"dark energy\",  # picks up topics not related to the mission\n",
@@ -322,24 +321,7 @@
     "min_num_words_tweet = 3\n",
     "\n",
     "upload_to_s3 = True\n",
-    "cleanup_local_files = True\n",
-    "\n",
-    "# columns for EDA\n",
-    "vcols = [\n",
-    "    \"is_quote_status\",\n",
-    "    \"quote_count\",\n",
-    "    \"reply_count\",\n",
-    "    # \"retweet_count\",\n",
-    "    \"favorite_count\",\n",
-    "    \"favorited\",\n",
-    "    \"retweeted\",\n",
-    "    \"source_text\",\n",
-    "    \"user_followers\",\n",
-    "    \"user_friends\",\n",
-    "    \"user_favourites\",\n",
-    "    \"user_verified\",\n",
-    "    \"retweeted_tweet\",\n",
-    "]"
+    "cleanup_local_files = True"
    ]
   },
   {
@@ -3530,7 +3512,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
