--- a/notebooks/5-process-data/notebooks/5_process_data.ipynb
+++ b/notebooks/5-process-data/notebooks/5_process_data.ipynb
@@ -284,8 +284,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 9 µs, sys: 0 ns, total: 9 µs\n",
-      "Wall time: 10.7 µs\n"
+      "CPU times: user 5 µs, sys: 4 µs, total: 9 µs\n",
+      "Wall time: 10.3 µs\n"
      ]
     }
    ],
@@ -312,8 +312,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 8.3 ms, sys: 10.2 ms, total: 18.5 ms\n",
-      "Wall time: 3.48 s\n"
+      "CPU times: user 5.11 ms, sys: 9.56 ms, total: 14.7 ms\n",
+      "Wall time: 1.98 s\n"
      ]
     }
    ],
@@ -6233,7 +6233,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
